# Quant_research

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  PROJECT_SUMMARY.md  README.md  pyproject.toml
.github/workflows/: ci.yml  scheduled-research.yml
configs/: research.yaml
docs/: alpha_research.md  architecture.md  backtesting.md  data_pipeline.md  exchange_data.md  factor_research.md  feature_engineering.md  ml_research.md  monte_carlo.md  portfolio_research.md  strategy_research.md  walk_forward.md
notebooks/: README.md
reports/backtests/: README.md
reports/data_quality/: BTCUSDT_1h.md  README.md
reports/factor_research/: README.md
reports/global_research/: dataset_stats.csv  parameter_stability.csv  strategy_metrics.csv
reports/ml/: README.md
reports/monte_carlo/: README.md
reports/portfolio/: README.md
reports/walk_forward/: README.md
scripts/: edge_killswitch.py  refresh_candidates.py  refresh_candidates.sh  refresh_data.py  rotate_bot_pairs.py  setup.sh  start_web.sh
src/: __init__.py  config.py  logging_config.py
src/analysis/: __init__.py  cross_exchange.py  forward_test.py  global_report.py  monte_carlo.py  portfolio.py  regime.py  statistics.py  walk_forward.py  wf_scan.py
src/backtesting/: __init__.py  engine.py
src/cli/: app.py
src/data/: __init__.py  (+5 more)
tests/: conftest.py  test_data_storage.py  test_factor_research.py  test_features.py  test_global_report_metrics.py  test_nobitex.py  test_portfolio_and_ml.py  test_schema.py  test_statistics.py  test_strategy_backtest.py  test_validation.py  test_wf_scan.py
web/: app.js  dashboard.html  edges.html  i18n.js  styles.css
(+26 files in other folders)
