[project]
name = "bitcoin-quant-research-platform"
version = "0.1.0"
description = "Production-grade Bitcoin quantitative research pipeline for data engineering, factor research, backtesting, and ML."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Quant Research Contributors" }]
dependencies = [
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "scipy>=1.12.0",
    "scikit-learn>=1.4.0",
    "lightgbm>=4.3.0",
    "xgboost>=2.0.0",
    "matplotlib>=3.8.0",
    "plotly>=5.19.0",
    "statsmodels>=0.14.0",
    "pyarrow>=15.0.0",
    "ccxt>=4.2.0",
    "ta>=0.11.0",
    "vectorbt>=0.26.0",
    "joblib>=1.3.0",
    "pydantic>=2.6.0",
    "typer>=0.12.0",
    "rich>=13.7.0",
    "tabulate>=0.9.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "ruff>=0.4.0", "mypy>=1.8.0", "types-requests>=2.31.0"]

[project.scripts]
quant-research = "src.cli.app:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "C4", "SIM", "RUF"]
ignore = ["N999", "E501", "B008", "RUF022"]

[tool.mypy]
python_version = "3.12"
packages = ["src"]
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"

